# commit-explorer

./: .gitignore  config  job-important-projects.json  job.json  mauczka.job.json  pyproject.toml  requirements.txt  setup.py
commitexplorer/: __init__.py  cli.py  common.py  db.py  explore.py  importscripts.py  load.py  migrate.py  mine.py  save.py  server.py  stats.py
commitexplorer/migrate/: add_validation.py  dot_to_underscore.py  fs_to_mongo.py  gumtree_files_object_to_array.py  nested_to_underscore.py  refactoring_array_to_object.py
commitexplorer/tools/: __init__.py  ccfinder.py  fileminer.py  gumtree.py  messagecleaner.py  messageminer.py  nlp.py  refactoring_miner.py  spacy.py  spacyrunner.py  special_commit_finder.py  sstubs.py
commitexplorer/util/: accuratechanges.py
server/: server.py
