[tool.poetry]
name = "commit-explorer"
version = "0.1.0"
description = "Tool for mining large number of commits from GitHub and running different tools to analyze them"
authors = ["hlib <hlibbabii@gmail.com>"]
license = "Apache License 2.0"
packages = [
    { include = "commitexplorer" },
]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2021.5.30"
cffi = "1.14.6"
chardet = "4.0.0"
click = "8.0.1"
colorama = "0.4.4"
commonmark = "0.9.1"
Deprecated = "1.2.12"
gitdb = "4.0.7"
idna = "3.2"
jsons = "1.4.2"
pycparser = "2.20"
pygit2 = "1.6.1"
PyGithub = "1.55"
Pygments = "2.9.0"
PyJWT = "2.1.0"
PyNaCl = "1.4.0"
requests = "2.26.0"
rich = "10.6.0"
six = "1.16.0"
smmap = "4.0.0"
tqdm = "4.61.2"
typish = "1.9.2"
urllib3 = "1.26.6"
wrapt = "1.12.1"
PyDriller = "2.0"
GitPython = "^3.1.20"
pymongo = "^3.12.0"
pandas = "^1.3.2"
spacy = "^3.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ce = "commitexplorer.cli:ce"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
